<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/credit_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Instructions:"
        android:textColor="@color/gray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="   Use volume buttons or capture icon to take photos"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="   Short press for immediate capture\n   Long press for capture in 3 seconds\n"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Developer:"
        android:textColor="@color/gray" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="  Young Mo Kang\n"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Product Manager:"
        android:textColor="@color/gray" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="  Sujin Ashlyn Park\n"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Launcher Icon"
        android:textColor="@color/gray" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_icon_link_description"
        android:id="@+id/app_icon_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Switch Camera Icon"
        android:textColor="@color/gray" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_camera_link_description"
        android:id="@+id/switch_camera_icon_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Privacy Policy"
        android:textColor="@color/gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:id="@+id/privacy_policy"/>
</LinearLayout>