<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.blogspot.unixnme.takeiteasy.TakeItEasyMain">

    <SurfaceView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/surface_view" />

    <com.blogspot.unixnme.takeiteasy.OverlaidView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/overlaid_view" />

    <com.blogspot.unixnme.takeiteasy.OverlaidTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/countdown_textview"/>

    <com.blogspot.unixnme.takeiteasy.DemoView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/demo_layout" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/switch_camera_FAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/white"
                android:layout_margin="10dp"
                android:src="@drawable/flip_camera" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/demo_center_linear_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/instructions"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:rotation="-90"
                android:textColor="@color/white" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:rotation="-90"
                android:text="@string/check_box_text"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:id="@+id/checkBox"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:rotation="-90"
                android:id="@+id/close_button"
                android:text="@string/close_button"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:layout_weight="4">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/white"
                android:layout_margin="10dp"
                android:id="@+id/capture_button" />

        </RelativeLayout>

    </com.blogspot.unixnme.takeiteasy.DemoView>

</RelativeLayout>