<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#aa000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.blogspot.unixnme.takeiteasy.TakeItEasyMain">

    <SurfaceView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/surface_view" />

    <com.blogspot.unixnme.takeiteasy.OverlaidView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overlaid_view" />

    <com.blogspot.unixnme.takeiteasy.OverlaidTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countdown_textview"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/switch_camera_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:backgroundTint="@color/white"
        android:src="@drawable/flip_camera" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="40">

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/image_button_frame_layout"
            android:layout_gravity="center">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:backgroundTint="@color/white"
                android:layout_margin="0dp"
                android:id="@+id/capture_button" />

        </FrameLayout>

    </LinearLayout>

    <com.blogspot.unixnme.takeiteasy.DemoView
        style="@style/Transparent"
        android:background="#aa000000"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/demo_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/instructions"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:buttonTint="@color/white"
                android:id="@+id/checkBox"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/check_box_text"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/close_button"
            android:text="@string/close_button"/>


    </com.blogspot.unixnme.takeiteasy.DemoView>

</RelativeLayout>
